--- a/css/ui.css
+++ b/css/ui.css
@@ -21,21 +21,49 @@ background: rgb(4, 72, 106);
     flex-direction: column;
     color: white;
    margin: auto;
-  
 
 }
-.card{
+footer{
   background: black;
+  margin-top: auto;
+  padding: 20px;
   text-align: center;
-  padding: 5px;
-  width: 300px;
-  height: 300px;
-  border-radius: 4px;
 }
+footer i{
+  font-size: 40px;
+}
+
 main {
-
-
 max-width: 1000px;
 margin: auto;
   
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+/* Style for the product card */
+.card {
+  background-color: #05050578;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  color: #333;
+}
+
+.card:hover {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+
+.title {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.price {
+  font-weight: bold;
 }
